--- a/profilCreation.html
+++ b/profilCreation.html
@@ -18,21 +18,21 @@
     <div class="container">
         <h1 class="text-center mt-5">Création du Profil</h1>
         <form class="row g-3 needs-validation" novalidate>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <label for="validationCustom01" class="form-label">Pseudo :</label>
                 <input type="text" class="form-control" id="validationCustom01" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <label for="validationCustom02" class="form-label">Nom :</label>
                 <input type="text" class="form-control" id="validationCustom02" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <label for="validationCustom03" class="form-label">Prénom :</label>
                 <input type="text" class="form-control" id="validationCustom03" required>
                 <div class="valid-feedback">
@@ -46,36 +46,43 @@
                     Please provide a valid email.
                 </div>
             </div>
+            <div class="col-md-6">
+                <label for="validationCustom04" class="form-label">Telephone :</label>
+                <input type="text" class="form-control" id="validationCustom05" required>
+                <div class="invalid-feedback">
+                    Please provide a valid phone.
+                </div>
+            </div>
             
-            <div class="col-md-2">
+            <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Rue :</label>
                 <input type="text" class="form-control" id="validationCustom06" required>
                 <div class="invalid-feedback">
                     Please provide a valid street.
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Code Postal :</label>
                 <input type="text" class="form-control" id="validationCustom07" required>
                 <div class="invalid-feedback">
                     Please provide a valid CP.
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Ville :</label>
                 <input type="text" class="form-control" id="validationCustom08" required>
                 <div class="invalid-feedback">
                     Please provide a valid Town.
                 </div>
             </div>
-                        <div class="col-md-2">
+            <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Mot de passe :</label>
                 <input type="text" class="form-control" id="validationCustom09" required>
                 <div class="invalid-feedback">
                     Please provide a valid password.
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-6">
                 <label for="validationCustom06" class="form-label">Confirmation :</label>
                 <input type="text" class="form-control" id="validationCustom10" required>
                 <div class="invalid-feedback">
